fix spacing in project overlay text

--- a/src/components/TextOnImageUponHover/index.css
+++ b/src/components/TextOnImageUponHover/index.css
@@ -31,32 +31,29 @@
   -webkit-transition: opacity .2s;
 }
 
-.overlay-description {
-	opacity: 0.5;
-	transition: opacity .2s;
-	-webkit-transition: opacity .2s;
-
-/*	-webkit-transition: margin .2s;
-	transition: margin .2s;
-	margin-top: 3em;*/
-}
-
 .overlay:hover .overlay-title {
   visibility: visible;
   border-bottom: 1px solid white;
   color: white;
   margin-bottom: .5em;
-  font-size: 1em;
-  /*margin-top: .5em;*/
-  opacity: 1;
   font-size: 1.5em;
+  margin: 0;
+
+  opacity: 1;
+
+}
+
+.overlay-description {
+  opacity: 0.5;
+  transition: opacity .2s;
+  -webkit-transition: opacity .2s;
 }
 
 .overlay:hover .overlay-description {
 	visibility: visible;
 	color: white;
-	/*margin-top: 0;*/
+  margin-top: 0;
+
 	opacity: 1;
-	/*font-size: 1em;*/
 }
 
